fix input line-heights on safari

--- a/index.css
+++ b/index.css
@@ -5,16 +5,17 @@ body {
 textarea, input, button, select {
   font-family: inherit;
   font-size: inherit;
+  line-height: normal;
 }
 
 .signup-form input {
-  text-indent: 25px;
+  text-indent: 1.7rem;
 }
 
 .name-input {
   background: url(avatar.svg) no-repeat;
-  background-position: 4px 3px;
-  background-size: 23px;
+  background-position: .1rem .2rem;
+  background-size: 1.8rem;
 }
 
 .first-name-input {
@@ -25,24 +26,26 @@ textarea, input, button, select {
 .last-name-input {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  margin-left: -5px
+  margin-left: -5px;
+  border-left: none;
 }
 
 .email-input {
   background: url(email.svg) no-repeat;
-  background-position: 5px 5px;
-  background-size: 20px;
+  background-position: .3rem .4rem;
+  background-size: 1.4rem;
 }
 
 .brand-input {
   background: url(briefcase.svg) no-repeat;
-  background-position: 5px 5px;
-  background-size: 20px;
+  background-position: .3rem .3rem;
+  background-size: 1.45rem;
 }
 
 .upc-input {
   background: url(barcode.svg) no-repeat;
-  background-size: 30px;
+  background-position: .05rem .05rem;
+  background-size: 2rem;
 }
 
 .flex-1 {
